Fixed bug with z-index.

--- a/src/scss/blocks-all/_aside.scss
+++ b/src/scss/blocks-all/_aside.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 11;
+  z-index: 12;
   width: 5.4%;
   height: 100vh;
   background-color: #fff;
