--- a/src/scss/blocks-all/_main-header.scss
+++ b/src/scss/blocks-all/_main-header.scss
@@ -4,7 +4,7 @@
   top: 0;
   right: 0;
   width: 100%;
-  z-index: 10;
+  z-index: 11;
   background: #fff;
   padding: 50px 5.4%;
   transition: $transition-time all ease;
